Thu Nov  6 08:22:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3432_Regression_Test.cpp:
        * tests/CDR_File_Test.cpp:
        * tests/Message_Queue_Test.cpp:
        * tests/OS_Test.cpp:
        * tests/Process_Manager_Test.cpp:
        * ace/Service_Repository.cpp:
        * tests/TP_Reactor_Test.cpp:
          Fixed unicode problems

        * tests/run_test.pl:
          Add the process startup time to the test time, improves the
          test results on slow systems

Wed Nov  5 19:23:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/PerlACE/ProcessVX_Unix.pm:
        * bin/PerlACE/ProcessVX_Win32.pm:
        * bin/PerlACE/ProcessWinCE.pm:
        * bin/PerlACE/TestTarget_VxWorks.pm:
        * bin/PerlACE/TestTarget_WinCE.pm:
          Store a reference to the target in the process and set the
          executable extension correct for windows ce

Wed Nov  5 15:54:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_ctype.inl:
          Don't emulate isblank with isctype(_ISBLANK), isctype only checks
          for space, isblank should check space and tab

Wed Nov  5 13:20:00 UTC 2008  Simon Massey <sma at prismtech dot com>

        * tests/Process_Test.cpp:
          Attempt to correct for wide character ACE_TCHAR versions.

Wed Nov  5 09:36:00 UTC 2008  Simon Massey <sma at prismtech dot com>

        * tests/Process_Test.cpp:
          Removed Fuzz errors.

Wed Nov  5 08:49:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-lynxos.h:
          LynxOS5 has isblank

        * ace/config-aix-5.x.h:
          AIX lacks isctype

Wed Nov  5 04:04:57 UTC 2008  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * May the next president of the USA have the strength and courage
          to lead the USA wisely and help it to achieve its promise as a
          advocate for freedom and democracy.
